modified to accept taps for selections and fitting mobile devices

--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@
 title: jspsych-demos
 #email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  jsPsych tasks made by the Niv Lab
+  jsPsych tasks made by the Niv Lab (and modified for mobile devices by @jackgray from the NARC Lab)
 baseurl: "/jspsych-demos" # the subpath of your site, e.g. /blog
-url: "https://nivlab.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://jackgray.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # aesthetics
 logo: /assets/img/logo.png
